@@ -591,6 +591,9 @@ Trunk (unreleased changes)
     HADOOP-5822.  Fix javac warnings in several dfs tests related to unncessary
     casts.  (Jakob Homan via szetszwo)
 
+    HADOOP-5842.  Fix a few javac warnings under packages fs and util.
+    (Hairong Kuang via szetszwo)
+
 Release 0.20.1 - Unreleased
 
   INCOMPATIBLE CHANGES
